<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_list_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/cli_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_item_user_name"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/cli_card_logo"
        app:layout_constraintTop_toTopOf="@id/cli_card_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cli_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cli_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cli_card_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/chat_item_image"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_card" />

            <TextView
                android:id="@+id/cli_card_chat_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/chat_item_message"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cli_card_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cli_card_image" />

            <TextView
                android:id="@+id/cli_card_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/chat_item_details"
                android:textColor="@color/item_selected"
                android:textSize="@dimen/small_text"
                android:contentDescription="@string/chat_item_image"
                app:layout_constraintBottom_toBottomOf="@id/cli_card_chat_name"
                app:layout_constraintEnd_toStartOf="@id/cli_card_arrow"
                app:layout_constraintTop_toTopOf="@id/cli_card_chat_name" />

            <ImageView
                android:id="@+id/cli_card_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/chat_item_image"
                app:layout_constraintBottom_toBottomOf="@id/cli_card_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cli_card_details"
                app:layout_constraintVertical_bias="0.6"
                app:srcCompat="@drawable/ic_arrow_6dp" />

            <ImageView
                android:id="@+id/cli_card_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/chat_item_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cli_card_chat_name"
                app:srcCompat="@drawable/ic_like_17dp" />

            <ImageView
                android:id="@+id/cli_card_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/chat_item_image"
                app:layout_constraintBottom_toBottomOf="@id/cli_card_like"
                app:layout_constraintStart_toEndOf="@id/cli_card_like"
                app:layout_constraintTop_toTopOf="@id/cli_card_like"
                app:srcCompat="@drawable/ic_chat_16dp" />

            <ImageView
                android:id="@+id/cli_card_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/chat_item_image"
                app:layout_constraintBottom_toBottomOf="@id/cli_card_like"
                app:layout_constraintStart_toEndOf="@id/cli_card_chat"
                app:layout_constraintTop_toTopOf="@id/cli_card_like"
                app:srcCompat="@drawable/ic_share_16dp" />

            <TextView
                android:id="@+id/cli_card_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/chat_item_date"
                android:textColor="@color/gray"
                android:textSize="@dimen/sub_header_text"
                app:layout_constraintBottom_toBottomOf="@id/cli_card_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cli_card_like" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cli_card_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/cli_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cli_card">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cli_logo"
            style="@style/roundedImageViewRounded"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/chat_item_image"
            android:padding="2dp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
